# quickwrite

./: .env.example  .gitignore  README.md  USAGE.md  pyproject.toml  requirements.txt
config/: genres.yaml  settings.yaml
config/prompts/: chapter_outline.yaml  chapter_write.yaml  character_design.yaml  trend_analysis.yaml  world_building.yaml
deploy/: deploy.sh  nginx.conf  quickwrite.service
src/: __init__.py  config.py  main.py
src/core/: __init__.py  models.py
src/data_collection/: __init__.py  base.py  fanqie_scraper.py  qidian_scraper.py  rate_limiter.py
src/generation/: __init__.py  chapter_writer.py  character_designer.py  context_manager.py  planner.py  plot_outliner.py  quality_checker.py  story_bible.py  world_builder.py
src/learning/: __init__.py  knowledge_base.py  style_optimizer.py  writing_analytics.py
src/llm/: __init__.py  client.py  cost_tracker.py  prompt_manager.py
src/publishing/: __init__.py  format_epub.py  local_publisher.py
src/scheduler/: __init__.py  jobs.py  scheduler_service.py
src/storage/: database.py  file_store.py
src/storage/repositories/: chapter_repo.py  novel_repo.py  trend_repo.py
src/trend_analysis/: __init__.py  analyzer.py  genre_classifier.py  tag_extractor.py
src/utils/: logging_config.py  retry.py  text_utils.py
src/web/: __init__.py  server.py
src/web/static/: style.css
src/web/templates/: base.html  chapter.html  create.html  index.html  learning.html  login.html  (+2 more)
tests/: __init__.py  phase1_verify.py  phase2_verify.py  phase4_verify.py  phase5_verify.py  phase6_verify.py  phase_web_verify.py
