[project]
name = "novel-writer-agent"
version = "0.1.0"
description = "AI-powered Chinese web novel writing agent with trend learning and scheduled publishing"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "sqlalchemy>=2.0.30",
    "apscheduler>=4.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.1",
    "python-dotenv>=1.0.0",
    # Web UI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "aiofiles>=24.0.0",
    # Web scraping
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "playwright>=1.44.0",
    "fake-useragent>=1.5.0",
    # EPUB output
    "ebooklib>=0.18",
    # Text processing
    "jieba>=0.42.1",
    # CLI
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
